# rag-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: profile.example.md
